--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 			<!-- resume header with your name and title -->
 			<h1>YOUR NAME</h1>
 			<hr>
-			YOUR TITLE (EX: SOFTWARE ENGINEERING STUDENT)
+			BUSINESS INTELLIGENCE LEAD
 			<hr>
 		</header>
 		<main>
 			<article id="mainLeft">
 				<section>
 					<h2>CONTACT</h2>
-					<!-- contact info including social media -->
+					<ul>
+                        <li>linkedin</li>
+                        <li>email</li>
+                        <li>goodreads</li>
+                    </ul>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
