--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
-		<title>CONNER FERGUSON résumé</title>
+		<title>CONNER FERGUSON RESUME</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
-
+5
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
 			<h1>YOUR NAME</h1>
 			<hr>
-			BUSINESS INTELLIGENCE LEAD
+			YOUR TITLE
 			<hr>
 		</header>
 		<main>
 			<article id="mainLeft">
 				<section>
 					<h2>CONTACT</h2>
-					<ul>
-                        <li>linkedin</li>
-                        <li>email</li>
-                        <li>goodreads</li>
-                    </ul>
+					<!-- contact info including social media -->
+                    <p>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:cferguson90@gmail.com.com">EMAIL</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/Condortheburninator">GITHUB</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <a href="https://www.linkedin.com/in/connerferguson/">LINKEDIN</a>
+                    </p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
+                    <p>data engineering, business intelligence</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
+                    <h3>YOUR MAJOR</h3>
+                    <p>
+                        Your university or school
+                    </p>
+                    <p>
+                        2018-2022
+                    </p>
 				</section>            
 			</article>
 			<article id="mainRight">
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
+					<p>A brief paragraph about you and what kind of company you want to work for.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
+                    <h3>JOB TITLE</h3>
+                    <p>
+                            Company Name | 2008 - 2010
+                    </p>
+                    <p>
+                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                    </p>
+                    <ul>
+                            <li>Cool accomplishment</li>
+                            <li>Cool accomplishment</li>
+                            <li>Cool accomplishment</li>
+                    </ul>
 				</section>
 			</article>
 		</main>
