--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 		<link href="style.css" rel="stylesheet">
 		<title>CONNER FERGUSON RESUME</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <meta charset="UTF-8">
 	</head>
 5
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>YOUR NAME</h1>
+			<h1>CONNER RESUME</h1>
 			<hr>
-			YOUR TITLE
+			BUSINESS INTELLIGENCE LEAD
 			<hr>
 		</header>
 		<main>
@@ -31,10 +32,20 @@
                         <a href="https://www.linkedin.com/in/connerferguson/">LINKEDIN</a>
                     </p>
 				</section>
+                <section>
+                    <h2>CURRENTLY LEARNING</h2>
+                    <p>google cloud platform</p>
+                    <p>google big query</p>
+                    <p>dbt</p>
+                    <p>airflow</p>
+                </section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>data engineering, business intelligence</p>
+                    <p>coding: python, pandas, sql, markdown</p>
+                    <p>data viz: tableau, power bi, looker</p>
+                    <p>&#9889;: tableau, power bi, looker</p>
+                    <p>database: big query, azure sql, azure synapse</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
@@ -57,9 +68,9 @@
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>JOB TITLE</h3>
+                    <h3>BUSINESS INTELLIGENCE LEAD</h3>
                     <p>
-                            Company Name | 2008 - 2010
+                            bowery valuation | 2022-05 - present
                     </p>
                     <p>
                             Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
