updated skills & currently learning

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <meta charset="UTF-8">
 	</head>
-5
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
@@ -34,18 +33,24 @@
 				</section>
                 <section>
                     <h2>CURRENTLY LEARNING</h2>
-                    <p>google cloud platform</p>
-                    <p>google big query</p>
-                    <p>dbt</p>
-                    <p>airflow</p>
+                    <p>🌱 google cloud platform</p>
+                    <p>🌱 google big query</p>
+                    <p>🌱 dbt</p>
+                    <p>🌱 data studio</p>
                 </section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>coding: python, pandas, sql, markdown</p>
-                    <p>data viz: tableau, power bi, looker</p>
-                    <p>&#9889;: tableau, power bi, looker</p>
-                    <p>database: big query, azure sql, azure synapse</p>
+                    <p>&#9889; coding: python, pandas, sql, markdown</p>
+                    <p>&#9889; data viz: tableau, power bi, looker, google data studio</p>
+                    <p>&#9889; database: big query, azure sql, azure synapse</p>
+                    <p>&#9889; process mapping: lucidchart, miro, visio</p>
+                    <p>&#9889; etl: python, azure data factory, ssis</p>
+                    <p>&#9889; advanced excel</p>
+                    <p>&#9889; systems: microsoft dynamics 365 finance and supply chain management, salesforce, netsuite</p>
+                    <p>&#9889; project management: agile methodology, asana, jira, notion, azure devops</p>
+                    <p>&#9889; requirements gathering</p>
+                    <p>&#9889; working proficiency in standard and egyptian arabic (6.5 years of study), knowledge of french, chinese, and bahasa melayu</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
