--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>CONNER RESUME</h1>
+            <pre>
+_____ _____ _   _ _   _ ___________  ______ _____ _____ _   ____  ________ 
+/  __ \  _  | \ | | \ | |  ___| ___ \ | ___ \  ___/  ___| | | |  \/  |  ___|
+| /  \/ | | |  \| |  \| | |__ | |_/ / | |_/ / |__ \ `--.| | | | .  . | |__  
+| |   | | | | . ` | . ` |  __||    /  |    /|  __| `--. \ | | | |\/| |  __| 
+| \__/\ \_/ / |\  | |\  | |___| |\ \  | |\ \| |___/\__/ / |_| | |  | | |___ 
+ \____/\___/\_| \_|_| \_|____/\_| \_| \_| \_\____/\____/ \___/\_|  |_|____/ 
+            </pre>
 			<hr>
-			BUSINESS INTELLIGENCE LEAD
+            BUSINESS INTELLIGENCE LEAD
 			<hr>
 		</header>
 		<main>
@@ -34,33 +41,46 @@
                 <section>
                     <h2>CURRENTLY LEARNING</h2>
                     <p>🌱 google cloud platform</p>
-                    <p>🌱 google big query</p>
-                    <p>🌱 dbt</p>
+                    <p>🌱 big query</p>
                     <p>🌱 data studio</p>
+                    <p>🌱 dbt</p>
                 </section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
                     <p>&#9889; coding: python, pandas, sql, markdown</p>
-                    <p>&#9889; data viz: tableau, power bi, looker, google data studio</p>
+                    <p>&#9889; data viz: tableau, power bi, looker, data studio</p>
                     <p>&#9889; database: big query, azure sql, azure synapse</p>
                     <p>&#9889; process mapping: lucidchart, miro, visio</p>
                     <p>&#9889; etl: python, azure data factory, ssis</p>
                     <p>&#9889; advanced excel</p>
                     <p>&#9889; systems: microsoft dynamics 365 finance and supply chain management, salesforce, netsuite</p>
-                    <p>&#9889; project management: agile methodology, asana, jira, notion, azure devops</p>
+                    <p>&#9889; project management: agile, asana, jira, notion, azure devops</p>
                     <p>&#9889; requirements gathering</p>
                     <p>&#9889; working proficiency in standard and egyptian arabic (6.5 years of study), knowledge of french, chinese, and bahasa melayu</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3>🎓 mba: supply chain & business analytics</h3>
                     <p>
-                        Your university or school
+                        🏫 indiana university 
                     </p>
                     <p>
-                        2018-2022
+                        2018-2020
+                    </p>
+                    <p>
+                        ~
+                    </p>
+                    <h3>🎓 bs: international business</h3>
+                    <p>
+                        🏫 elon university 
+                    </p>
+                    <p>
+                        2008-2012
+                    </p>
+                    <p>
+                        ~
                     </p>
 				</section>            
 			</article>
@@ -68,22 +88,74 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-					<p>A brief paragraph about you and what kind of company you want to work for.</p>
+					<p>hiya! i'm conner. since 2019 i've been in analytics and am passionate about helping people answer their own questions.</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>BUSINESS INTELLIGENCE LEAD</h3>
+                    <h3>business intelligence lead</h3>
                     <p>
-                            bowery valuation | 2022-05 - present
+                            bowery valuation | 2022-05 -> present
                     </p>
                     <p>
-                            Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+                            bowery's first dedicated data hire.
                     </p>
                     <ul>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
-                            <li>Cool accomplishment</li>
+                            <li>design and built bowery's first analytics infrastructure enabling 3 projects and cross system analysis for the first time</li>
+                    </ul>
+                    <p>
+                        ~
+                    </p>
+                    <h3>senior business intelligence analyst</h3>
+                    <p>
+                            fairlife | phoenix az | 2021-09 -> 2022-05
+                    </p>
+                    <p>
+                            chosen to be part of fairlife's first ever business intelligence team
+                    </p>
+                    <ul>
+                            <li>built a raw material weeks of supply report (8 data sets over 4 systems) to expose production and supply risk based on inventory levels and production schedule.</li>
+                            <li>programmed forecast accuracy report (with dynamic 90 day lagging) exposing trends and performance to the supply planning team.</li>
+                            <li>onboarded Github, growing to 40+ repositories and enabling 3 production rollbacks with minimal downtime.</li>
+                            <li>consolidated general ledger reporting (2 ERP systems) in SQL to save 48 hours (annual) during month-end.</li>
+                    </ul>
+                    <p>
+                        ~
+                    </p>
+                    <h3>business intelligence and analytics lead</h3>
+                    <p>
+                            fairlife | phoenix az | 2020-08 -> 2021-09
+                    </p>
+                    <p>
+                        chosen to support launch of new ERP implementation in greenfield west coast manufacturing facility.
+                    </p>
+                    <ul>
+                            <li>delivered on 60 requirements (over 10 reports & 5 custom queries) to satisfy reporting gaps during ERP implementation of Microsoft Dynamics 365 Supply Chain Management and Finance.</li>
+                            <li>architected end to end data and reporting infrastructure (ETL through data visualisation) to support new ERP implementation utilizing Microsoft Azure technologies.</li>
+                            <li>programmed new ERP system to expose and transform hidden data, resulting in $30k in savings from implementation partner.</li>
+                    </ul>
+                    <p>
+                        ~
+                    </p>
+                    <h3>business intelligence and analytics lead</h3>
+                    <p>
+                            fairlife | grand rapids mi | 2020-08 -> 2021-09
+                    </p>
+                    <p>
+                            fairlife's first dedicated data hire!
+                    </p>
+                    <ul>
+                            <li>built an automated weeks of supply demand tool that forecasted inventory risk (5+ data sources) helping reduce customer cuts by 70%.</li>
+                            <li>optimized ETL and data model processing by partitioning and delta handling, allowing for the delivery of refreshed data 20 minutes earlier (67% faster).</li>
+                    </ul>
+                    <p></p>
+					<h2>ADDITIONAL</h2>
+                    <ul>
+                        <li>📚 book devourer (across all genres) having consumed 700+ books since 2013</li>
+                        <li>🧳 20 years of international living experience (in 10 different countries)</li>
+                        <li>⌨️  mechanical keyboard enthusiast</li>
+                        <li>🥾 avid hiker and bodyweight fitness practitioner</li>
+                        <li>🎸 below average guitar player</li>
                     </ul>
 				</section>
 			</article>
