--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ _____ _____ _   _ _   _ ___________  ______ _____ _____ _   ____  ________
 					<!-- your work experience -->
                     <h3>business intelligence lead</h3>
                     <p>
-                            bowery valuation | 2022-05 -> present
+                        🏬 bowery valuation | 2022-05 -> present
                     </p>
                     <p>
                             bowery's first dedicated data hire.
@@ -108,7 +108,7 @@ _____ _____ _   _ _   _ ___________  ______ _____ _____ _   ____  ________
                     </p>
                     <h3>senior business intelligence analyst</h3>
                     <p>
-                            fairlife | phoenix az | 2021-09 -> 2022-05
+                        🐄 fairlife | phoenix az | 2021-09 -> 2022-05
                     </p>
                     <p>
                             chosen to be part of fairlife's first ever business intelligence team
@@ -124,7 +124,7 @@ _____ _____ _   _ _   _ ___________  ______ _____ _____ _   ____  ________
                     </p>
                     <h3>business intelligence and analytics lead</h3>
                     <p>
-                            fairlife | phoenix az | 2020-08 -> 2021-09
+                        🐄 fairlife | phoenix az | 2020-08 -> 2021-09
                     </p>
                     <p>
                         chosen to support launch of new ERP implementation in greenfield west coast manufacturing facility.
@@ -139,7 +139,7 @@ _____ _____ _   _ _   _ ___________  ______ _____ _____ _   ____  ________
                     </p>
                     <h3>business intelligence and analytics lead</h3>
                     <p>
-                            fairlife | grand rapids mi | 2020-08 -> 2021-09
+                        🐄 fairlife | grand rapids mi | 2020-08 -> 2021-09
                     </p>
                     <p>
                             fairlife's first dedicated data hire!
